# cpp-qt-flappy-bird-game

./: Bird.cpp  Bird.h  CMakeLists.txt  Digit.cpp  Digit.h  Floor.cpp  Floor.h  GameWindow.cpp  GameWindow.h  Main.cpp  Pipe.cpp  Pipe.h  README.md  Resources.qrc
